# making_computer_games_edge_compatible

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  error.rs  log.rs  main.rs  plugin.rs  systems.rs
plotter/: main.py  requirements.txt
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  serializable.rs
