[workspace]
members = ["shared", "server", "client"]

[package]
name = "bevy_graduation_project"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = "0.9.1"
bevy_rapier3d = { version = "0.20.0", features = ["dim3", "serde-serialize"] }
bincode = "1.3.3"
serde = "1.0.163"
serde_with = "3.0.0"
clap = { version = "4.2.7", features = ["cargo"] }
rand = "0.8.5"
tungstenite = "0.19.0"
human_bytes = "0.4.2"
tracing = "0.1.37"
tracing-subscriber = { version = "*", features = ["json"] }
tracing-appender = "*"
tracing-log = "*"
chrono = "*"
flate2 = "1.0.26"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[dependencies]
flate2.workspace = true
serde.workspace = true
